--- a/Docs/desktop.ini
+++ b/Docs/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Schermafbeelding 2024-06-03 155001.png=@Schermafbeelding 2024-06-03 155001,0
+Schermafbeelding 2024-06-03 163947.png=@Schermafbeelding 2024-06-03 163947,0
